--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@wdio/local-runner": "^9.5.7",
     "@wdio/mocha-framework": "^9.5.0",
     "@wdio/spec-reporter": "^9.5.0",
-    "@wdio/visual-service": "^6.3.0"
+    "@wdio/visual-service": "^6.3.0",
+    "webdriverio": "^9.5.7"
   },
   "scripts": {
-    "test": "wdio wdio.conf.ts"
+    "test:default": "wdio wdio-default.conf.ts"
   }
 }
