--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "webdriverio": "^9.5.7"
   },
   "scripts": {
-    "test:default": "wdio wdio-default.conf.ts"
+    "test:default": "wdio wdio-default.conf.ts",
+    "test:formatImageName": "wdio wdio-formatImageName.conf.ts"
   }
 }
