--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "test:default": "wdio wdio-default.conf.ts",
     "test:formatImageName": "wdio wdio-formatImageName.conf.ts",
+    "test:formatImageNameWithPath": "wdio wdio-formatImageNameWithPath.conf.ts",
     "test:screenshotPath": "wdio wdio-screenshotPath.conf.ts",
     "test:baselineFolder": "wdio wdio-baselineFolder.conf.ts"
   }
